# _CODER

./: .cursorrules  .gitignore  .windsurfrules  Dockerfile  Makefile  Readme.md  _CODER.coder.yaml  _test_project.yaml  celerybeat-schedule  conftest.py  cursor_extensions.txt  cursor_settings.json  docker-compose.yml  github-workflow.yml  grafana_ed25519  grafana_ed25519.pub  launch.md  mypy.ini  notion_commands_content.json  project.yaml  pyproject.toml  requirements.txt  sprint_recommendations.md  test_fx.py  todo_lints.md
.github/: pull_request_template.md
.trunk/: trunk.yaml
.trunk/configs/: .ruff.yaml
_docs/: MyInfrastuctureDeployementWorkflow.md  Project.md
_docs/_sprints/: 4.md  sprint1.md  sprint2.md  sprint4.md  sprint5.md  sprint6.md  sprint7.md  sprint8.md  sprint9.md
_docs/architecture/: proposed.md  proposed_notes.md
_setup/: Dockerfile  ai.txt  base.txt  conda.yaml  dev.txt  docker-compose.yml  prod.txt  requirements.txt  tools.txt
_sprints/: Project_deliverables.md  sprint1.md  sprint2.md  sprint3.md  sprints.md
_template/: apps.py
_template/docs/: project_structure.md
adwords/: README.md  apps.py
adwords/admin/: __init__.py  manager_admin.py
adwords/agents/: crew.py
adwords/api/: client.py  exceptions.example.py
adwords/migrations/: 0001_initial.py  0002_manageraccount_clientaccount.py  0003_manageraccount_vault_key.py  0004_alter_manageraccount_currency_code_and_more.py  0005_manageraccount_description.py
adwords/models/: __init__.py  client_model.py  manager_model.py
adwords/signals/: model_signals.py
adwords/tasks/: __init__.py  example_task
alfie/: Readme.md  apps.py  dirhelper.py  urls.py
alfie/templates/: coder_proejct_template.yaml
automation/: urls.py
backups/github-test-repo-20250106-015139/: config  packed-refs
cloudflare_management/: apps.py
core/: Readme.md  __init__.py  celery.py  config.py  logging_config.py  secrets.py  services.py  settings.py  urls.py  vault.py  vault_settings.py
core/configs/: __init__.py  celery.py  database.py  jazzmin.py  logging.py  security.py  vault.py
cursor-tools/: custom-composer-patch.js
cursor-tools/composer-injector/: .vscodeignore  extension.js  package-lock.json  package.json
github/files/: github_repos_20250103_154632.csv  github_repos_20250103_160207.csv
github_management/: apps.py  config_executor.py  forms.py  giithelper.py  git_service.py  services.py  urls.py  views.py
github_management/tests/: __init__.py  cleanup.py  test_branch_errors.py  test_git.py  test_git_service.py  test_yaml_validation.py
my_new_flow/: README.md  pyproject.toml
network/: Readme.md  __init__.py  apps.py
network/cloudflare/: Readme.md
network/nginxproxy/: Readme.md  __init__.py  apps.py
network/pfsense/: apps.py
network/proxmox/: apps.py
nginxproxy_management/: apps.py
notifier/: apps.py
notifier/services/: notify_me.py
notifier/tasks/: notify_me.py
notion/: Readme.md  Tony_TODO.md  __init__.py  apps.py  crew.py  feature-embeddings.md  implementation_guide.md  main.py  signals.py  sprint1_task.md
notion/admin/: __init__.py  database_admin.py  databaseadmin.py  notionagentjobadmin.py  page_admin.py  pageadmin.py  taskadmin.py
notion/agents/: crew.py
notion/api/: client.py
notion/config/: agents.yaml  tasks.yaml
notion/docs/: django_to_crewai_tools.md  project_structure_instructions.md  sprint_recommendations.md
notion/management/: __init__.py
notion/managers/: __init__.py  database_manager.py  notionagentjob.py  page.py  page_manager.py  task.py
notion/migrations/: 0001_initial.py  0002_task.py  0003_alter_notionagentjob_parent_page_id.py  0004_page.py  0005_delete_notionagentjob_delete_task_and_more.py  0006_task_page_blocks.py  0007_database.py  0008_database_content_database_embedding_and_more.py  0009_page_notion_page_embedding_idx.py  0010_auto_20250127_1714.py  0011_delete_page.py  0012_page.py  0013_remove_page_notion_page_title_idx.py  0014_alter_page_embedding.py  0015_alter_page_embedding.py  0016_alter_task_options_remove_task_config_and_more.py
notion/models/: __init__.py  database.py  notionagentjobs.py  page.py  task.py  task_error.py
notion/services/: embeddings.py  markdown.py  notey.py  project.py  sync.py
notion/signals/: __init__.py  page_signals.py
notion/tasks/: __init__.py  database_sync.py  page_tasks.py  processing.py  scanning.py  sync.py
notion/test_crew/: README.md
notion/tests/: conftest.py  manual_test.py  test_notion_agent.py  test_notion_commands.py
notion/tools/: Readme.md  __init__.py  base.py  callout_test_sample.md  create_page.py  create_page_with_markdown.py  custom_tool.py  edit.py  edit_page.py  errors.py  full_test_sample.md  list_pages.py  retrieve_pages.py  search.py
personal/email/: apps.py
personal/meetings/: apps.py
personal/sms/: apps.py
pfsense/: Readme.md  apps.py
pfsense/admin/: __init__.py  dhcproute_admin.py  task.py  task_admin.py  taskadmin.py
pfsense/api/: client.py  exceptions.py
pfsense/docs/: api_docs.md
pfsense/managers/: task.py  task_manager.py
pfsense/migrations/: 0001_initial.py  0002_rename_dhcproutes_dhcproute.py  0002_taskerror_status.py  0004_dhcproute_hostname.py  (+6 more)
pfsense_management/: apps.py
print/: README.md  apps.py  printers.yaml
print/api/: client.py  (+1 more)
project/: code_dirs_20250103_162024.csv  create_project.py
project_management/: code_dirs_20250103_162216.csv  dirhelper.py  services.py  urls.py
projects/: Readme.md  create_project.py  dirhelper.py  services.py
proxmox_management/: apps.py  urls.py
shared/: README.md  apps.py
shipper/: README.md  apps.py  urls.py
sprint/: sprint1.md
system/: Readme.md  coder_system.py  services.py
system/vscode/: cursor_extensions.txt  cursor_setup.sh  input_from_llm.md  my-global-extensions.txt  pyproject.toml  readme.md  test.py  user_settings.json
system_management/: apps.py  coder_system.py  services.py  urls.py
tests/: test_agent.py  test_cli.py  test_notion_agent.py  test_notion_agent_v2.py  test_processor.py
twilio_app/: README.md  apps.py
vault_management/: apps.py  urls.py
(+315 files in other folders)
