[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.9"
dependencies = [
    "pathlib",
    "typing",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP"   # pyupgrade
]
ignore = ["E501"]  # Line too long

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 